<resources>
    <string name="app_name">PocketBookApp</string>
    <string name="welcome">Welcome to Pocket Book App</string>
    <string name="without_login">Continue Without Login</string>
    <string name="login">Login</string>
    <string name="please_login">Please Login</string>
    <string name="new_user_signup">New User?<b>SignUp</b></string> <!--Make signup bold-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cPassword">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="new_category">Add a new Category</string>
    <string name="submit">Submit</string>
    <string name="category_title">Category Title</string>
    <string name="search">Search</string>
    <string name="new_book">Add a New Book</string>
    <string name="book_title">Book Title</string>
    <string name="book_category">Book Category</string>
    <string name="upload">Upload</string>
    <string name="book_description">Book Description</string>
    <string name="category">Category</string>
    <string name="books">Books</string>
    <string name="book_info">Edit Book Info</string>
    <string name="update">Update</string>
    <string name="none">N/A</string>
    <string name="description">The description of book is</string>
    <string name="download_book">Download Book</string>
    <string name="read_book">Read Book</string>
    <string name="downloads">Downloads</string>
    <string name="views">Views</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
    <string name="book_size">Book Size</string>
    <string name="not_logged">Not Logged In</string>
    <string name="pages">Pages</string>
    <string name="remove_favorite">Remove from\nFavorites</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="profile">Profile</string>
    <string name="book_details">Book Details</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
</resources>