<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.PdfDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/shape_toolbar2">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_details"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="22dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/optionsLL"
        app:layout_constraintTop_toBottomOf="@+id/toolbarRl"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/pdfRl"
                    android:layout_width="110dp"
                    android:layout_height="170dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray2">

                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/pdfView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleTv"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/pdfRl"
                    android:text="@string/book_title" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titleTv"
                    android:layout_toEndOf="@+id/pdfRl">

                    <TableRow>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/categoryLabelTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/category" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/categoryTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/none" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/dateLabelTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/date" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/dateTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/none" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/sizeLabelTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/size" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/sizeTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/none" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/viewsLabelTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/views" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/viewsTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/none" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/downloadsLabelTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/downloads" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/downloadsTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/none" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/pagesLabelTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/pages" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/pagesTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/none" />

                    </TableRow>
                </TableLayout>
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray3"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/commentsTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="Comments"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/addCommentBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="5dp"
                    android:src="@drawable/ic_comment_add_black"
                    android:background="@android:color/transparent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/commentsRv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/commentsTv"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray4"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/row_comments"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/optionsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_button3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/readBookBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/read_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/downloadBookBtn"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableTop="@drawable/ic_book_white"
            android:background="@color/design_default_color_on_primary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/downloadBookBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/download_book"
            app:layout_constraintEnd_toStartOf="@+id/favoriteBtn"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/readBookBtn"
            android:drawableTop="@drawable/ic_download_white"
            android:background="@color/design_default_color_on_primary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favoriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/downloadBookBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="11sp"
            android:text="@string/add_favorite"
            android:drawableTop="@drawable/ic_favorite_border_white"
            android:background="@color/design_default_color_on_primary"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>